# ecoinvent_interface

./: .env.template  .gitignore  .isort.cfg  .pre-commit-config.yaml  CHANGES.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  README.md.old  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: python-package-deploy.yml  python-test.yml
ecoinvent_interface/: __init__.py  core.py  mapping.py  process_interface.py  release.py  settings.py  spold_versions.py  storage.py  string_distance.py
eidl/: __init__.py  core.py  settings.py
tests/: __init__.py  conftest.py  test_process_interface.py  test_release.py  test_release_utils.py  test_settings.py  test_spold_versions.py
tests/fixtures/: Compartments-fixed.xml  Compartments.xml  dataset-fixed.spold  dataset.spold
